Added a data exploration section and visualization of results

--- a/ClarifyWorkshop.ipynb
+++ b/ClarifyWorkshop.ipynb
@@ -126,6 +126,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data exploration\n",
+    "\n",
+    "Before training a model, take a quick look at the training data below. The first column, `fraud`, is the column you want to predict, where `1` indicates a case of fraud and `0` indicates a legit case. The dataset contains columns related to the customer (e.g. `customer_gender_male` or `num_insurers_past_5_years`), related to the incident (e.g. `num_witnesses` or `incident_month`), and related to the insurance policy (e.g. `policy_deductable` or `policy_state_ca`). Notice that the data has already been cleaned and pre-processed for you. For example, the customer gender and policy states have already gone through one-hot encoding. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_csv(\"data/train.csv\")\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table above provides a sample of the data, but let's take a look at all the columns and check for null values. Using the code below, you can see that all null values have been removed from the dataset already."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train a model using XGBoost\n",
     "\n",
     "Once the training dataset has been persisted in S3, you can start training a model by defining which SageMaker Estimator you'd like to use. For this guide, you will use the [XGBoost Open Source Framework](https://sagemaker.readthedocs.io/en/stable/frameworks/xgboost/xgboost.html) to train your model. This estimator is accessed via the SageMaker SDK, but mirrors the open source version of the [XGBoost Python package](https://xgboost.readthedocs.io/en/latest/python/index.html). Any functionality provided by the XGBoost Python package can be implemented in your training script. This training script has already been provided as `xgboost_starter_script.py`. Feel free to open it and take a look.\n",
@@ -326,7 +361,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example dataset, the data is biased against females with only 39.8% of the data samples from female customers. We will address this in the next notebook where we show how we mitigate this class imbalance bias. Although we are only addressing Class Imbalance as an exemplar of bias statistics, you can also take into consideration many other factors of bias. For more detail, see : [Fairness Measures for Machine Learning in Finance](https://pages.awscloud.com/rs/112-TZM-766/images/Fairness.Measures.for.Machine.Learning.in.Finance.pdf)"
+    "In this example dataset, the data is biased against females. You can double-check the class imbalance by plotting a bar graph showing the number of data samples for male customers compared to female customers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.customer_gender_female.value_counts(normalize=True).plot.bar()\n",
+    "plt.xticks([0, 1], [\"Male\", \"Female\"]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will address this in the next section where we show how we mitigate this class imbalance bias. Although we are only addressing Class Imbalance as an exemplar of bias statistics, you can also take into consideration many other factors of bias. For more detail, see : [Fairness Measures for Machine Learning in Finance](https://pages.awscloud.com/rs/112-TZM-766/images/Fairness.Measures.for.Machine.Learning.in.Finance.pdf)"
    ]
   },
   {
@@ -346,8 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"data/train.csv\")\n",
-    "gender = train[\"customer_gender_female\"]\n",
+    "gender = train_data[\"customer_gender_female\"]\n",
     "gender.value_counts()"
    ]
   },
@@ -365,7 +416,7 @@
    "outputs": [],
    "source": [
     "smote = SMOTE(random_state=42)\n",
-    "train_data_upsampled, gender_res = smote.fit_resample(train, gender)\n",
+    "train_data_upsampled, gender_res = smote.fit_resample(train_data, gender)\n",
     "train_data_upsampled[\"customer_gender_female\"].value_counts()"
    ]
   },
@@ -501,7 +552,7 @@
     "    s3_data_input_path=train_data_upsampled_s3_path,\n",
     "    s3_output_path=bias_report_2_output_path,\n",
     "    label=\"fraud\",\n",
-    "    headers=train.columns.to_list(),\n",
+    "    headers=train_data.columns.to_list(),\n",
     "    dataset_type=\"text/csv\",\n",
     ")\n",
     "\n",
@@ -585,7 +636,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that the class imbalance is now 0.0, compared to 0.398 before. This is much better."
+    "You can see that the class imbalance is now 0.0, compared to 0.25387 before. This is much better. You can also plot another bar graph using the rebalanced dataset to visually check the difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_upsampled.customer_gender_female.value_counts(normalize=True).plot.bar()\n",
+    "plt.xticks([0, 1], [\"Male\", \"Female\"]);"
    ]
   },
   {
@@ -613,7 +674,7 @@
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-west-2:236514542706:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
